reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__generic_flatten_leaf_collision.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: schema
---
{
  "name": "",
  "functions": [
    {
      "name": "inout_test",
      "path": "",
      "input_type": {
        "name": "reflectapi_demo::tests::serde::TestLeafCollisionPair"
      },
      "output_kind": "complete",
      "output_type": {
        "name": "reflectapi_demo::tests::serde::TestLeafCollisionPair"
      },
      "serialization": [
        "json",
        "msgpack"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "primitive",
        "name": "bool",
        "description": "Boolean value"
      },
      {
        "kind": "struct",
        "name": "reflectapi::Empty",
        "description": "Struct object with no fields",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::TestFlattenIfElse",
        "fields": {
          "named": [
            {
              "name": "code",
              "type": {
                "name": "u16"
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::TestLeafCollisionPair",
        "fields": {
          "named": [
            {
              "name": "a",
              "type": {
                "name": "reflectapi_demo::tests::serde::TestUpdateOrElse",
                "arguments": [
                  {
                    "name": "reflectapi_demo::tests::serde::module_a::Sample"
                  },
                  {
                    "name": "reflectapi_demo::tests::serde::TestFlattenIfElse"
                  }
                ]
              },
              "required": true
            },
            {
              "name": "b",
              "type": {
                "name": "reflectapi_demo::tests::serde::TestUpdateOrElse",
                "arguments": [
                  {
                    "name": "reflectapi_demo::tests::serde::module_b::Sample"
                  },
                  {
                    "name": "reflectapi_demo::tests::serde::TestFlattenIfElse"
                  }
                ]
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::TestUpdateOrElse",
        "parameters": [
          {
            "name": "T"
          },
          {
            "name": "C"
          }
        ],
        "fields": {
          "named": [
            {
              "name": "inner",
              "type": {
                "name": "T"
              },
              "required": true,
              "flattened": true
            },
            {
              "name": "if_else",
              "type": {
                "name": "std::option::Option",
                "arguments": [
                  {
                    "name": "C"
                  }
                ]
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::module_a::Sample",
        "fields": {
          "named": [
            {
              "name": "a_field",
              "type": {
                "name": "u32"
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::module_b::Sample",
        "fields": {
          "named": [
            {
              "name": "b_field",
              "type": {
                "name": "bool"
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "enum",
        "name": "std::option::Option",
        "description": "Optional nullable type",
        "parameters": [
          {
            "name": "T"
          }
        ],
        "representation": "none",
        "variants": [
          {
            "name": "None",
            "description": "The value is not provided, i.e. null",
            "fields": "none"
          },
          {
            "name": "Some",
            "description": "The value is provided and set to some value",
            "fields": {
              "unnamed": [
                {
                  "name": "0",
                  "type": {
                    "name": "T"
                  }
                }
              ]
            }
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u16",
        "description": "16-bit unsigned integer"
      },
      {
        "kind": "primitive",
        "name": "u32",
        "description": "32-bit unsigned integer"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "primitive",
        "name": "bool",
        "description": "Boolean value"
      },
      {
        "kind": "struct",
        "name": "reflectapi::Infallible",
        "description": "Error object which is expected to be never returned",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::TestFlattenIfElse",
        "fields": {
          "named": [
            {
              "name": "code",
              "type": {
                "name": "u16"
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::TestLeafCollisionPair",
        "fields": {
          "named": [
            {
              "name": "a",
              "type": {
                "name": "reflectapi_demo::tests::serde::TestUpdateOrElse",
                "arguments": [
                  {
                    "name": "reflectapi_demo::tests::serde::module_a::Sample"
                  },
                  {
                    "name": "reflectapi_demo::tests::serde::TestFlattenIfElse"
                  }
                ]
              },
              "required": true
            },
            {
              "name": "b",
              "type": {
                "name": "reflectapi_demo::tests::serde::TestUpdateOrElse",
                "arguments": [
                  {
                    "name": "reflectapi_demo::tests::serde::module_b::Sample"
                  },
                  {
                    "name": "reflectapi_demo::tests::serde::TestFlattenIfElse"
                  }
                ]
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::TestUpdateOrElse",
        "parameters": [
          {
            "name": "T"
          },
          {
            "name": "C"
          }
        ],
        "fields": {
          "named": [
            {
              "name": "inner",
              "type": {
                "name": "T"
              },
              "required": true,
              "flattened": true
            },
            {
              "name": "if_else",
              "type": {
                "name": "std::option::Option",
                "arguments": [
                  {
                    "name": "C"
                  }
                ]
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::module_a::Sample",
        "fields": {
          "named": [
            {
              "name": "a_field",
              "type": {
                "name": "u32"
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::module_b::Sample",
        "fields": {
          "named": [
            {
              "name": "b_field",
              "type": {
                "name": "bool"
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "enum",
        "name": "std::option::Option",
        "description": "Optional nullable type",
        "parameters": [
          {
            "name": "T"
          }
        ],
        "representation": "none",
        "variants": [
          {
            "name": "None",
            "description": "The value is not provided, i.e. null",
            "fields": "none"
          },
          {
            "name": "Some",
            "description": "The value is provided and set to some value",
            "fields": {
              "unnamed": [
                {
                  "name": "0",
                  "type": {
                    "name": "T"
                  }
                }
              ]
            }
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u16",
        "description": "16-bit unsigned integer"
      },
      {
        "kind": "primitive",
        "name": "u32",
        "description": "32-bit unsigned integer"
      }
    ]
  }
}
