reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__generic_flatten_nested-2.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "super :: into_typescript_code :: <\nTestUpdateOrElse< TestIdentityData<TestFlattenIdent, TestFlattenIdentData>,\nTestFlattenIfElse, > > ()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name:
//

export function client(base: string | Client): __definition.Interface {
  return __implementation.__client(base);
}

export namespace __definition {
  export interface Interface {
    inout_test: (
      input: reflectapi_demo.tests.serde.TestUpdateOrElse<
        reflectapi_demo.tests.serde.TestIdentityData<
          reflectapi_demo.tests.serde.TestFlattenIdent,
          reflectapi_demo.tests.serde.TestFlattenIdentData
        >,
        reflectapi_demo.tests.serde.TestFlattenIfElse
      >,
      headers: {},
      options?: RequestOptions,
    ) => AsyncResult<
      reflectapi_demo.tests.serde.TestUpdateOrElse<
        reflectapi_demo.tests.serde.TestIdentityData<
          reflectapi_demo.tests.serde.TestFlattenIdent,
          reflectapi_demo.tests.serde.TestFlattenIdentData
        >,
        reflectapi_demo.tests.serde.TestFlattenIfElse
      >,
      {}
    >;
  }
}
export namespace reflectapi {
  /**
   * Struct object with no fields
   */
  export interface Empty {}

  /**
   * Error object which is expected to be never returned
   */
  export interface Infallible {}
}

export namespace reflectapi_demo {
  export namespace tests {
    export namespace serde {
      export interface TestFlattenIdent {
        job_id: number /* u64 */;
      }

      export interface TestFlattenIdentData {
        payload: string;
      }

      export interface TestFlattenIfElse {
        code: number /* u16 */;
      }

      export type TestIdentityData<I, D> = {} & NullToEmptyObject<I> &
        NullToEmptyObject<D>;

      export type TestUpdateOrElse<T, C> = {
        if_else: C | null;
      } & NullToEmptyObject<T>;
    }
  }
}

namespace __implementation {

  function inout_test(client: Client) {
    return (
      input: reflectapi_demo.tests.serde.TestUpdateOrElse<
        reflectapi_demo.tests.serde.TestIdentityData<
          reflectapi_demo.tests.serde.TestFlattenIdent,
          reflectapi_demo.tests.serde.TestFlattenIdentData
        >,
        reflectapi_demo.tests.serde.TestFlattenIfElse
      >,
      headers: {},
      options?: RequestOptions,
    ) =>
      __request<
        reflectapi_demo.tests.serde.TestUpdateOrElse<
          reflectapi_demo.tests.serde.TestIdentityData<
            reflectapi_demo.tests.serde.TestFlattenIdent,
            reflectapi_demo.tests.serde.TestFlattenIdentData
          >,
          reflectapi_demo.tests.serde.TestFlattenIfElse
        >,
        {},
        reflectapi_demo.tests.serde.TestUpdateOrElse<
          reflectapi_demo.tests.serde.TestIdentityData<
            reflectapi_demo.tests.serde.TestFlattenIdent,
            reflectapi_demo.tests.serde.TestFlattenIdentData
          >,
          reflectapi_demo.tests.serde.TestFlattenIfElse
        >,
        {}
      >(client, "/inout_test", input, headers, options);
  }
}
