reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__generic_flatten_optional-2.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "super :: into_typescript_code :: < TestOptionalFlatten<TestFlattenInner> > ()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name:
//

export function client(base: string | Client): __definition.Interface {
  return __implementation.__client(base);
}

export namespace __definition {
  export interface Interface {
    inout_test: (
      input: reflectapi_demo.tests.serde.input.TestOptionalFlatten<reflectapi_demo.tests.serde.TestFlattenInner>,
      headers: {},
      options?: RequestOptions,
    ) => AsyncResult<
      reflectapi_demo.tests.serde.output.TestOptionalFlatten<reflectapi_demo.tests.serde.TestFlattenInner>,
      {}
    >;
  }
}
export namespace reflectapi {
  /**
   * Struct object with no fields
   */
  export interface Empty {}

  /**
   * Error object which is expected to be never returned
   */
  export interface Infallible {}
}

export namespace reflectapi_demo {
  export namespace tests {
    export namespace serde {
      export interface TestFlattenInner {
        inner_a: number /* u32 */;
        inner_b: string;
      }

      export namespace input {
        export type TestOptionalFlatten<T> = {
          code: number /* u16 */;
        } & Partial<T>;
      }

      export namespace output {
        export type TestOptionalFlatten<T> = {
          code: number /* u16 */;
        } & NullToEmptyObject<T | null>;
      }
    }
  }
}

namespace __implementation {

  function inout_test(client: Client) {
    return (
      input: reflectapi_demo.tests.serde.input.TestOptionalFlatten<reflectapi_demo.tests.serde.TestFlattenInner>,
      headers: {},
      options?: RequestOptions,
    ) =>
      __request<
        reflectapi_demo.tests.serde.input.TestOptionalFlatten<reflectapi_demo.tests.serde.TestFlattenInner>,
        {},
        reflectapi_demo.tests.serde.output.TestOptionalFlatten<reflectapi_demo.tests.serde.TestFlattenInner>,
        {}
      >(client, "/inout_test", input, headers, options);
  }
}
